# web_hw_8

./: README.md  pyproject.toml
first_part/: main.py  models.py  seed.py
second_part/: consumer_email.py  consumer_sms.py  models.py  producer.py  seed.py
